# Aegis-eBPF

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Makefile  README.md  Vagrantfile  run_memory_checks.sh  test_memfd_create.py  test_ptrace_attach.py
.cargo/: config.toml  linux-test-runner.sh
.github/workflows/: ci.yml  core-compat.yml  docker-publish.yml  ffi-assurance.yml  release.yml  rust.yml
aegis-ebpf/: Cargo.toml  build.rs  cbindgen.toml
aegis-ebpf-common/src/: lib.rs
aegis-ebpf-ebpf/: Cargo.toml
aegis-ebpf-ebpf/src/: main.rs
aegis-ebpf-loader/: Cargo.toml
aegis-ebpf-loader/src/: main.rs
aegis-ebpf/benches/: arena_benchmark.rs  rule_engine_bench.rs
aegis-ebpf/include/: aegis.h
aegis-ebpf/pkg/aegis/: README.md  aegis.go  alert.go  alert_handle.go  alert_integrity_test.go  alert_unit_test.go  arena_handle.go  event.go  example_test.go  go.mod  sensor.go  throughput_stress_test.go
aegis-ebpf/proto/: alert.proto
aegis-ebpf/python/aegis/: _ffi.py  alert.py  arena.py  types.py
aegis-ebpf/python/tests/: test_bindings.py
aegis-ebpf/src/: alert.rs  enrichment.rs  lib.rs  main.rs
aegis-ebpf/src/enrichment/: kubernetes.rs
aegis-ebpf/src/ffi/: alert_channel.rs  arena.rs  engine.rs  event_callback.rs  handle.rs  jit_storm.rs  mod.rs  types.rs
aegis-ebpf/src/observability/: metrics.rs
aegis-ebpf/src/pipeline/: config.rs  mod.rs
aegis-ebpf/src/rules/: loader.rs  mod.rs  watcher.rs
aegis-ebpf/src/state/: mod.rs
aegis-ebpf/tests/: ebpf_overhead_bench.rs  ebpf_syscall_stress_test.rs  observability_integration.rs  tracepoint_attach_test.rs  verifier_load_test.rs
aegis-ebpf/tests/common/: mod.rs
clients/go/: go.mod
clients/go/aegis/: aegis.go  aegis_test.go  types.go  types_test.go
clients/go/examples/: main.go
clients/go/mace/: mace.go  mace_test.go  types_test.go
docs/: PROJECT_STATE.md  aegis_log_level.md  quickstart.md  writing_rules.md
docs/1-getting-started/: quickstart.md
docs/2-installation/: linux-deb.md
docs/3-concepts/: architecture.md  events-and-alerts.md  rules-engine.md
docs/4-configuration/: agent-config.md
docs/5-developer-guide/: testing-and-ci.md
mace-ebpf/: Cargo.toml  build.rs
mace-ebpf-common/: Cargo.toml
mace-ebpf-common/src/: lib.rs
mace-ebpf-ebpf/: Cargo.toml
mace-ebpf-ebpf/src/: main.rs
mace-ebpf/benches/: rule_engine_bench.rs
mace-ebpf/examples/observability/: README.md
mace-ebpf/include/: mace.h
mace-ebpf/pkg/mace/: go.mod
mace-ebpf/python/mace/: __init__.py  engine.py
mace-ebpf/src/: alert.rs  audit.rs  cmdline_context.rs  execve_wire.rs  kernel_health.rs  lib.rs  main.rs  proc_cmdline.rs
mace-ebpf/src/enrichment/: kubernetes.rs
mace-ebpf/src/ffi/: engine.rs  types.rs
mace-ebpf/src/observability/: metrics.rs
mace-ebpf/src/pipeline/: mod.rs
mace-ebpf/src/rules/: loader.rs  mod.rs  watcher.rs
mace-ebpf/src/state/: mod.rs
mace-replay/: Cargo.toml
mace-replay/src/: main.rs
mace-replay/tests/: replay_cli.rs
packaging/: aegis-agent.config.example.yaml  aegis.service  config.yaml  mace-agent.config.example.yaml  mace.service  nfpm.yaml  postinst.sh  postrm.sh  prerm.sh  rules.yaml
scripts/ci/: criterion_baseline.json  criterion_gate.py
scripts/vm/: README-kernel-matrix.md  git-commit-matrix-files.sh  prepare-artifact.sh  provision-common.sh  provision-kernel.sh  run-matrix.sh  run-test.sh
scripts/vm/suites/: step-2.3-toctou-lru.sh.example
tests/offensive/: README.md
tests/simulations/: mace-agent.example.yaml  rules.yaml  rules_root_sensitive_execve.yaml
(+5 files in other folders)
