[package]
name = "aegis-ebpf-ebpf"
version = "0.1.0"
edition.workspace = true

[features]
# The `aegis-ebpf` binary is BPF-only (`#![no_std]`). Gate it so `cargo build --workspace` on the
# host does not try to link it as a normal Linux binary (which would conflict with `std` / panic).
default = []
ebpf-bin = []

[dependencies]
aegis-ebpf-common = { path = "../aegis-ebpf-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "aegis-ebpf"
path = "src/main.rs"
required-features = ["ebpf-bin"]
