[package]
name = "mace-ebpf-common"
version = "0.1.0"
edition.workspace = true

license.workspace = true

[features]
default = []
user = ["aya", "dep:serde"]

[dependencies]
aya = { workspace = true, optional = true }
serde = { version = "1", default-features = false, features = ["derive", "alloc"], optional = true }

[lib]
path = "src/lib.rs"
