[package]
name = "mace-ebpf-ebpf"
version = "0.1.0"
edition.workspace = true

[features]
# The `mace-ebpf` binary is BPF-only (`#![no_std]`). Gate it so `cargo build --workspace` on the
# host does not try to link it as a normal Linux binary (which would conflict with `std` / panic).
default = []
ebpf-bin = []
# Smaller `sys_enter_execve` program: only `argv[0]` (wire format unchanged). Enable via
# `MACE_EBPF_EXECVE_ARGV0_ONLY=1` when building `mace-ebpf` if multi-arg capture fails verifier load.
execve_argv0_only = []

[dependencies]
mace-ebpf-common = { path = "../mace-ebpf-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "mace-ebpf"
path = "src/main.rs"
required-features = ["ebpf-bin"]
