[package]
name = "mace-replay"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Offline replay of recorded MemoryEvent JSON against a Mace rule set (sandbox / QA)."

[[bin]]
name = "mace-replay"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
mace-ebpf = { path = "../mace-ebpf" }
mace-ebpf-common = { path = "../mace-ebpf-common", features = ["user"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
